--- a/.editorconfig
+++ b/.editorconfig
@@ -12,17 +12,5 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.php]
-indent_size = 4
-
-[*.js]
-indent_size = 4
-
-[*.scss]
-indent_size = 4
-
-[*.feature]
+[*.{feature,rb}]
 indent_size = 2
-
-[*.rb]
-indent_size = 4
